Renamed to sim.

--- a/sim_srv/rebar.config
+++ b/sim_srv/rebar.config
@@ -2,9 +2,9 @@
 {deps, []}.
 
 {escript_incl_apps,
- [sim_srv]}.
-{escript_main_app, sim_srv}.
-{escript_name, sim_srv}.
+ [sin_srv]}.
+{escript_main_app, sin_srv}.
+{escript_name, sin_srv}.
 {escript_emu_args, "%%! +sbtu +A0\n"}.
 
 %% Profiles
